# django-anchor

./: .coverage  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .tool-versions  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  pyproject.toml  runtests.py
.github/workflows/: compatibility_test.yml  publish_to_pypi.yml  test.yml
anchor/: __init__.py  admin.py  apps.py  checks.py  settings.py  storage.py  tasks.py  transformers.py  urls.py
anchor/forms/: __init__.py  fields.py  widgets.py
anchor/management/commands/: anchor_purge_unattached.py
anchor/migrations/: 0001_initial.py
anchor/models/: __init__.py  attachment.py  base.py  blob.py  fields.py  variant.py  variant_record.py  variant_with_record.py  variation.py
anchor/models/blob/: __init__.py  blob.py  keys.py  representations.py  signing.py
anchor/models/fields/: __init__.py  single_attachment.py
anchor/services/processors/: __init__.py  base.py  pillow.py
anchor/services/transformers/: __init__.py  base.py  image.py
anchor/services/urls/: __init__.py  base.py  file_system.py  s3.py
anchor/support/: base58.py  signing.py
anchor/templates/anchor/widgets/: admin_blob_input.html
anchor/templatetags/: anchor.py
anchor/views/: __init__.py  blobs.py  file_system.py  representations.py
attachments/: admin.py  apps.py  transformers.py
attachments/forms/: fields.py  widgets.py
attachments/migrations/: 0001_initial.py
attachments/models/: __init__.py  attachment.py  blob.py  fields.py
attachments/templatetags/: attachments.py
demo/demo/: settings.py  urls.py
demo/movies/: admin.py  models.py  tests.py  urls.py  views.py
demo/movies/management/commands/: seed.py
demo/movies/migrations/: 0001_initial.py  0002_movie_poster.py
demo/movies/templates/movies/: base.html  movie_detail.html  movie_form.html
docs/: conf.py  configuration.rst  getting_started.rst  index.rst  installation.rst  models.rst  templatetags.rst  transformers.rst
docs/api/: forms.rst  index.rst  models.rst
docs/api/services/: processors.rst  transformers.rst  urls.rst
docs/source/: conf.py  installation.rst
tests/: run.py  settings.py  test_admin.py  test_blob_model.py  test_settings.py  test_templatetags.py  test_variant_file_field.py  urls.py
tests/dummy/: apps.py  models.py  urls.py  views.py
tests/dummy/migrations/: 0001_initial.py
tests/dummy/templates/dummy/: dummy_list.html  dummy_update.html
tests/models/: test_base.py  test_blob.py  test_signing.py  test_variant.py  test_variation.py
tests/models/blob/: test_blob.py  test_representations.py
tests/models/dummy/: test_movie.py
tests/services/processors/: test_base_processor.py  test_pillow_processor.py
tests/services/transformers/: test_base_transformer.py  test_image_transformer.py
tests/services/urls/: test_base.py  test_file_system.py  test_s3.py
tests/support/: test_base58.py  test_signing.py
tests/views/: test_blob.py  test_file_system.py  test_representations.py
tests/views/dummy/: test_views.py
